댓글 기능 추가

--- a/_posts/contents_01_java/2024-09-01-Java_01.md
+++ b/_posts/contents_01_java/2024-09-01-Java_01.md
@@ -16,7 +16,6 @@ category: Java
 프로그래밍은 과정과 절차, 기능을 중심으로 동작하는 방식과 <br>
 기능 수행 단위인 객체를 중심으로 동작하는 방식으로 구분한다고 한다.<br>
 대표적으로 C언어는 절차 지향 언어. C++, Python, Java는 객체 지향 언어로 구분한다. <br>
-그 차이를 이야기하는 것은 이제 처음 개발이라는 분야에 들어온 사람이 감당하기 어려운 부분이라고 생각하여... <br>
 앞으로 다룰 자바의 특징인 객체 지향에 대해서 보고 들은 내용을 돌이켜 보려고 한다.
 </dd></dt>
 
@@ -24,7 +23,7 @@ category: Java
 
 <dt>객체 지향 언어<dd>
 이름에서도 알 수 있듯이 무언가를 구분하는 단위로써 객체라는 이름을 사용하고 있다. <br>
-즉, 객체는 `특정 기능을 수행하는 하나의 단위` 정도로 생각하면 될 것 같다. <br>
+즉, 객체는 <b>특정 기능을 수행하는 하나의 단위</b> 정도로 생각하면 될 것 같다. <br>
 객체 지향 프로그램이란 이런 기능 수행 단위로서의 객체를 이용하여 컴퓨터와 소통?하는 것을 의미하는 것이 아닐까 <br>
 이런 객체 지향 프로그래밍은 4자기 특징이 있다고 한다.
 </dd></dt>
