--- a/_posts/contents_03_Spring/2024-10-15-Spring_03.md
+++ b/_posts/contents_03_Spring/2024-10-15-Spring_03.md
@@ -9,23 +9,165 @@ category: Spring
 <br>
 
 ---
-## Annotation
+# Annotation
 사전적 의미는 주석이라는 뜻이지만, 자바에서는 특정 기능을 수행하는 역할을 담당한다. <br>
-어노테이션은 수행 기능에 따라 <br>
+
+어노테이션은 수행 기능에 따라 다음과 같이 구분한다.<br>
+> 
 1> 의존성 주입 <br>
 2> AOP <br>
 3> 웹 Layer <br>
 4> 데이터 Layer <br>
 5> 트랜젝션 <br>
-으로 나눌 수 있다. <br>
+
+<hr>
+
+## 1> 의존성 주입
+객체 간의 의존성을 관리하거나 구성 요소를 선언 <br>
+
+
+<details>
+<summary class="summary-title">@Component</summary>
+<li>org.springframework.stereotype.Component</li>
+<li>의존성 주입을 위한 기본 Annotation</li>
+<li>개발자가 직접 작성한 Class를 Bean으로 등록하기 위한 어노테이션</li>
+<li>@Configuration의 @ComponentScan을 통해 자동으로 검색되어 Bean으로 등록된다.</li>
+<details>
+<summary>예시</summary>
+<div markdown="1">
+
+```java
+@Component
+public class ComponentClass {
+	
+}
+```
+</div>
+</details>
+</details>
+
+<details>
+<summary class="summary-title">@Service</summary>
+<li>org.springframework.stereotype.Service</li>
+<li>비즈니스 로직을 수행하는 Component</li>
+<li>@Component와 동일하게 동작하지만 비즈니스 로직을 수행하는 클래스임을 명시할 때 작성한다.</li>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
+</details>
+
+<details>
+<summary class="summary-title">@Repository</summary>
+<li>org.springframework.stereotype.Repository</li>
+<li>DAO _ DB와의 상호작용을 담당</li>
+<li>예외 변환 (Exception Translation)</li>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
+</details>
+
+<details>
+<summary class="summary-title">@Controller</summary>
+<li>org.springframework.stereotype.Controller</li>
+<li>Spring MVC Controller 클래스</li>
+<li>요청 처리 & 응답 반환</li>
+<li>@RequestMapping과 함께 쓰인다.</li>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
+</details>
 
 
 
-### Stereotype
-: 스프링 컨테이너가 관리 컴포넌트로 식별할 수 있도록 작성하는 표식 개념. <br>
 
-@Component : DI를 위한 기본 Annotation <br>
 
+<details>
+<summary class="summary-title">@Bean</summary>
+<li>org.springframework.context.annotation.Bean</li>
+<li>개발자가 직접 제어가 불가능한 외부 라이브러리 등을 Bean으로 만들 때 사용되는 어노테이션</li>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
+</details>
+
+<br>
+
+<details>
+<summary class="summary-title">@Autowired</summary>
+<li>org.springframework.beans.factory.annotation.Autowired</li>
+<li></li>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
+</details>
+
+
+<details>
+<summary class="summary-title">@Qualifier</summary>
+<li>org.springframework.beans.factory.annotation.Qualifier</li>
+<li></li>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
+</details>
+
+
+<details>
+<summary class="summary-title">@Value</summary>
+<li>org.springframework.beans.factory.annotation.Value</li>
+<li></li>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
+</details>
+
+
+
+
+
+<!-- 
 <table>
     <thead>
         <tr>
@@ -49,14 +191,14 @@ category: Spring
             <td></td>
         </tr>
         <tr>
-            <td>@Controller</td>
-            <td>프레젠테이션 로직을 수행하는 Component</td>
-            <td>MVC 컨트롤러 역할 : 웹 컨텍스트에서 사용된다</td>
+            <td>@Repository</td>
+            <td>DB와 상호작용을 담당하는 Component<br>(Persistance, DAO)</td>
+            <td>DB 예외 : Spring based Unchecked Exception</td>
         </tr>
         <tr>
-            <td>@Repository</td>
-            <td>데이터 접근 객체의 역할을 수행<br>(Persistance, DAO)</td>
-            <td>DB 예외 : Spring based Unchecked Exception</td>
+            <td>@Controller</td>
+            <td>프레젠테이션 로직을 수행하는 Component</td>
+            <td>MVC 컨트롤러 : 요청 처리 & 응답 반환</td>
         </tr>
     </tbody>
     <thead>
@@ -64,34 +206,53 @@ category: Spring
             <th></th><th></th><th></th>
         </tr>
     </thead>
-</table>
+</table> 
+-->
 
 
-### Context
+
 
 <details>
-<summary><b>@Configuration</b></summary>
-<span>설정</span>
+<summary class="summary-title">@Configuration</summary>
+<li></li>
+<li></li>
+<details>
+<summary>API 내용 확인</summary>
 <div markdown="1">
 
+```java
+
+```
 </div>
 </details>
+</details>
+
 
 <details>
-<summary><b>@</b></summary>
+<summary class="summary-title">@EnableAspectJAutoProxy</summary>
+<li></li>
+<li></li>
+<details>
+<summary>API 내용 확인</summary>
 <div markdown="1">
 
+```java
+
+```
 </div>
+</details>
 </details>
 
 
 
 <details>
-<summary><b>@ComponentScan</b></summary>
-<span>패키지를 설정하여 패키지 내 컴포넌트 스캔</span>
+<summary class="summary-title">@ComponentScan</summary>
+<li>패키지를 설정하여 패키지 내 컴포넌트 스캔</li>
+<li></li>
 <details>
-<summary>전문</summary>
+<summary>View Comments</summary>
 <div markdown="1">
+
 ```java
 /*
  * Copyright 2002-2023 the original author or authors.
@@ -335,9 +496,11 @@ public @interface ComponentScan {
 ```
 </div>
 </details>
-    
+
 <div markdown="1">
+
 ```java
+package org.springframework.context.annotation;
 @Retention(RetentionPolicy.RUNTIME)
 @Target(ElementType.TYPE)
 @Documented
@@ -364,4 +527,374 @@ public @interface ComponentScan {
     String[] basePackages() default {};
 ```
 </div>
+</details>
+
+<hr>
+
+## 2> AOP
+핵심 로직에 추가할 부가 기능(횡단 관심사항)을 모듈화하는 방법 제공
+
+
+<details>
+<summary class="summary-title">@Aspect</summary>
+<li>org.springframework.stereotype.Aspect</li>
+<li>AOP에서 사용하는 관점(Aspect)을 정의하는 클래스</li>
+<li>포인트컷(Pointcut)과 어드바이스(Advice)를 포함</li>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
+</details>
+
+
+<details>
+<summary class="summary-title">@Before</summary>
+<li></li>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
+</details>
+
+
+<details>
+<summary class="summary-title">@After</summary>
+<li></li>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
+</details>
+
+
+<details>
+<summary class="summary-title">@AfterReturning</summary>
+<li></li>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
+</details>
+
+
+<details>
+<summary class="summary-title">@AfterThrowing</summary>
+<li></li>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
+</details>
+
+
+<details>
+<summary class="summary-title">@Around</summary>
+<li>메서드 실행 전후 로직 실행</li>
+<li>메서드 실행을 가로채고 제어</li>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
+</details>
+
+
+
+## 3> Web Layer
+Spring MVC와 관련된 웹 어플리케이션 개발에 사용되는 어노테이션
+
+
+<details>
+<summary class="summary-title">@RequestMapping</summary>
+<li>org.springframework.web.bind.annotation.RequestMapping</li>
+<li>HTTP 요청을 특정 메서드 또는 클래스에 매핑</li>
+<li>GET, POST 등 요청 처리</li>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
+</details>
+
+
+<details>
+<summary>
+<b>@GetMapping<br>
+&emsp;@PostMapping<br>
+&emsp;@PutMapping<br>
+&emsp;@DeleteMapping</b></summary>
+<li>org.springframework.web.bind.annotation.GetMapping</li>
+&emsp; org.springframework.web.bind.annotation.PostMapping <br>
+&emsp; org.springframework.web.bind.annotation.PutMapping <br>
+&emsp; org.springframework.web.bind.annotation.DeleteMapping <br>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
+</details>
+
+
+<details>
+<summary class="summary-title">@RequestParam</summary>
+<li>org.springframework.web.bind.annotation.RequestParam</li>
+<li></li>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
+</details>
+
+
+<details>
+<summary class="summary-title">@RequestBody</summary>
+<li>org.springframework.web.bind.annotation.RequestBod</li>
+<li>HTTP 요청 본문을 객체로 변환하여 받을 때 사용</li>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
+</details>
+
+
+<details>
+<summary class="summary-title">@ResponseBody</summary>
+<li>org.springframework.web.bind.annotation.ResponseBody</li>
+<li>메서드 반환값을 응답 본문에 직접 넣어 반환</li>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
+</details>
+
+
+<details>
+<summary class="summary-title">@RestController</summary>
+<li>org.springframework.web.bind.annotation.RestController</li>
+<li>@Controller + @ResponseBody</li>
+<li>JSON 또는 XML 형식의 데이터를 반환하는 컨트롤러</li>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
+</details>
+
+
+<details>
+<summary class="summary-title">@PathVariable</summary>
+<li>org.springframework.web.bind.annotation.PathVariable</li>
+<li>URI 경로의 변수 값을 메서드 매개변수로 전달</li>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
+</details>
+
+<hr>
+
+## 4> Data Layer
+
+데이터베이스 및 ORM 관련 어노테이션 <br>
+
+
+<details>
+<summary class="summary-title">@Entity</summary>
+<li>javax.persistence.Entity</li>
+<li>JPA</li>
+<li>DB 테이블과 매핑</li>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
+</details>
+
+
+<details>
+<summary class="summary-title">@Table</summary>
+<li>javax.persistence.Table</li>
+<li>엔티티 클래스가 매핑될 데이터베이스의 테이블</li>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
+</details>
+
+
+<details>
+<summary class="summary-title">@Id</summary>
+<li>javax.persistence.Id</li>
+<li>엔티티의 기본 키(PK)</li>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
+</details>
+
+
+<details>
+<summary class="summary-title">@GeneratedValue</summary>
+<li>javax.persistence.GeneratedValue</li>
+<li>기본 키 값을 자동으로 생성</li>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
+</details>
+
+
+<details>
+<summary class="summary-title">@Column</summary>
+<li>javax.persistence.Column</li>
+<li>엔티티 클래스의 필드를 테이블의 컬럼에 매핑</li>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
+</details>
+
+
+<details>
+<summary class="summary-title">@JoinColumn</summary>
+<li>javax.persistence.JoinColumn</li>
+<li>테이블 조인 (외래 키 참조)</li>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
+</details>
+
+
+<details>
+<summary>
+<b>@OneToMany<br>
+&emsp;@ManyToOne<br>
+&emsp;@OneToOne<br>
+&emsp;@ManyToMany</b></summary>
+<li>javax.persistence.OneToMany</li>
+&emsp; javax.persistence.ManyToOne<br>
+&emsp; javax.persistence.OneToOne<br>
+&emsp; javax.persistence.ManyToMany<br>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
+</details>
+
+<hr>
+
+## 5> Transaction
+트랜젝션 처리 어노테이션
+
+
+<details>
+<summary>@Transactional</summary>
+<li>org.springframework.transaction.annotation.Transactional</li>
+<li>트랜젝션 자동 처리</li>
+<li>예외 발생 시 자동 롤백, 정상 실행 시 커밋</li>
+<details>
+<summary>API 내용 확인</summary>
+<div markdown="1">
+
+```java
+
+```
+</div>
+</details>
 </details>
