--- a/_posts/contents_03_Spring/2024-10-17-Spring_05.md
+++ b/_posts/contents_03_Spring/2024-10-17-Spring_05.md
@@ -39,8 +39,8 @@ category: Spring
 - ### 1. PreparedStatement 사용
 > @Repository에서 직접 Connection 객체를 반환
 <pre><code>
-prepareStatement = connection.prepareStatement("SELECT no, name FROM emp");
-resultSet = prepareStatement.executeQuery();
+preparedStatement = connection.prepareStatement("SELECT no, name FROM emp");
+resultSet = preparedStatement.executeQuery();
 while(resultSet.next()) {
 	DTO dto = new DTO();
 	dto.setNo(resultSet.getInt("no"));
