--- a/_posts/contents_03_Spring/2024-10-18-Spring_06.md
+++ b/_posts/contents_03_Spring/2024-10-18-Spring_06.md
@@ -47,6 +47,8 @@ Web Application Server (WAS)를 설치할 필요가 없다. <br>
 <summary>View Comments</summary>
 <div markdown="1">
 ```java
+package org.springframework.web.servlet;
+
 @SuppressWarnings("serial")
 public class DispatcherServlet extends FrameworkServlet {
 
@@ -309,6 +311,7 @@ public class DispatcherServlet extends FrameworkServlet {
 <li>summary</li>
 <div markdown="1">
 ```java
+package org.springframework.web.servlet;
 @SuppressWarnings("serial")
 public class DispatcherServlet extends FrameworkServlet {
 
@@ -349,7 +352,7 @@ public class DispatcherServlet extends FrameworkServlet {
 <hr>
 
     @Controller
-     DispatcherServlet -> Handler Mapper를 거쳐서 요청을 받는다
+     DispatcherServlet -> HandlerMapping을 통해 결정, 요청 전달.
      인스턴스 생성, 클라이언트와 데이터 입출력을 제어하는 클래스에 적용
      클라이언트의 요청을 처리한 후 지정된 view에 모델 객체를 전달하는 역할
     
@@ -434,9 +437,11 @@ public class DispatcherServlet extends FrameworkServlet {
     <summary>💡 [API] ModelAndView</summary>
     <div markdown="1">
     <details>
-    <summary>전문</summary>
+    <summary>View Comments</summary>
     <div markdown="1">
     ```java
+    package org.springframework.web.servlet;
+
     /**
      * Holder for both Model and View in the web MVC framework.
      * Note that these are entirely distinct. This class merely holds
@@ -777,6 +782,8 @@ public class DispatcherServlet extends FrameworkServlet {
     </details>
 
     ```java
+    package org.springframework.web.servlet;
+    
     public class ModelAndView {
         @Nullable
         private Object view;
