github.io _ reply _ signin issue

--- a/_posts/contents_03_Spring/2024-10-17-Spring_05.md
+++ b/_posts/contents_03_Spring/2024-10-17-Spring_05.md
@@ -500,5 +500,6 @@ public void showData() {
 
 
 
-참고 사이트 
-[https://cafe.daum.net/flowlife/](https://cafe.daum.net/flowlife/HqLk/60)
+참고 사이트 <br>
+[https://cafe.daum.net/flowlife/](https://cafe.daum.net/flowlife/HqLk/60) <br>
+[https://skyblue300a.tistory.com/](https://skyblue300a.tistory.com/7) <br>
