--- a/_posts/contents_03_Spring/2024-10-18-Spring_06.md
+++ b/_posts/contents_03_Spring/2024-10-18-Spring_06.md
@@ -362,8 +362,11 @@ public class DispatcherServlet extends FrameworkServlet {
     @RestController 
      = @Controller + @ResponseBody
 
-# 1. [legacy] View를 jsp로 설정한 경우 (권장 X) <br>
 
+## 1. [legacy] View를 jsp로 설정한 경우 (권장 X)
+
+<details markdown="1">
+<summary>[legacy] ver</summary>
     
 
 ## springweb01_jsp 
@@ -1555,6 +1558,8 @@ public class DispatcherServlet extends FrameworkServlet {
     </details>
 
     </details>
+</details>
+
 
 #### ❌ 오류 : ClassNotFoundException
 - 
@@ -1588,6 +1593,85 @@ public class DispatcherServlet extends FrameworkServlet {
     </div>
     </details>
 
+
 --- 
 
-참고 사이트 
+## 2. [Thymeleaf] View를 html로 설정한 경우 (권장)
+
+<details markdown="1">
+<summary>[Thymeleaf] ver</summary>
+
+- 스프링 부트의 폴더는 static 폴더와 templates 폴더로 구성된다.
+
+![](/assets/image/2024-10-24-static_templates.png)
+
+static 폴더는 사용자의 접근이 가능한 영역으로 CSR 방식의 전송이 가능하다. 
+> ex. redirect
+
+templates 폴더는 사용자의 접근이 불가능한 영역으로 SSR 방식의 전송만 가능하다. 
+> ex. forward
+
+<h3>1. 페이지 이동은 Controller가 모두 통제한다.</h3>
+welcome page = @GetMapping("/") <br>
+index.html 파일도 templates 폴더 내에 작성한다. <br>
+
+```java
+@GetMapping("/")
+public String index(){
+    return "index";
+}
+```
+
+<h3>2. Controller가 응답 데이터를 Model 객체에 저장하여 반환한다.</h3>
+
+html 파일 내 타임리프 문법을 사용하여 데이터 반환 및 출력. <br>
+
+> <h4>타임리프 문법을 사용하기 위해서는 아래의 속성을 html 엘리먼트에 적용해야 한다. </h4>
+템플릿 엔진에 의해 자바 코드가 있는 경우와 없는 경우 구분하여 출력된다. <br>
+
+![](/assets/image/2024-10-21-template_engine_01.png)
+> forward 방식의 페이지 이동과 타임 리프 문법이 html 태그 내에 입력된 소스 코드
+<br>
+
+![](/assets/image/2024-10-21-template_engine_02.png)
+> 템플릿 엔진에 의해 프로그램으로 부터 반환한 데이터를 html 엘리먼트 요소 내에 적용된다.
+<br>
+
+```html
+<html xmlns:th="http://www.thymeleaf.org">
+```
+
+```html
+<a th:href="@{insert}">회원 추가</a>
+<table border="1">
+    <tr>
+        <th>회원 번호</th><th>회원명</th><th>주소</th><th></th>
+    </tr>
+    <th:block th:if="${list.size > 0}">
+        <tr th:each="data : ${list}" th:object="${data}">
+            <td th:text="*{num}"></td>
+            <td th:text="*{name}"></td>
+            <td th:text="*{addr}"></td>
+            <td>
+                <a th:href="@{/update(num=*{num})}">수정</a> / 
+                <a th:href="@{/delete(num=*{num})}">삭제</a>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="4" th:text="|회원 수 : ${list.size}|"></td>
+        </tr>
+    </th:block>
+</table>
+<br>
+<a th:href="@{/}">메인으로</a> <!-- 요청명이 없는 경우 Controller가 index.html로 forwaring -->
+```
+</details>
+
+타임리프의 예약어에 대해서는 <br>
+[Spring_07_Thymeleaf](/2024/10/19/Spring_07)에서 다루려고 한다. <br>
+
+
+---
+
+참고 사이트 <br>
+[https://cafe.daum.net/flowlife](https://cafe.daum.net/flowlife/HrhB/82)
