--- a/_posts/contents_03_Spring/2024-10-19-Spring_07.md
+++ b/_posts/contents_03_Spring/2024-10-19-Spring_07.md
@@ -64,7 +64,7 @@ SPA(Single Page Application)화면 : 비동기 처리(Ajax)등 <br>
             <td>*{ ... }</td><td>선택 변수</td><td>th:object="${items}" th:text="*${price}"</td>
         </tr>
         <tr>
-            <td>#{ ... }</td><td>메시지, properties 같은 외부 자원에서 <br>코드에 해당하는 문자열을 반환</td><td>th:text="#{member.name}"</td>
+            <td>#{ ... }</td><td>메시지, properties 같은 외부 자원에서 <br>코드에 해당하는 문자열을 반환</td><td>#numbers.formatInteger(data, 3, 'COMMA')<br>정수를 3자리 마다 ,로 구분</td>
         </tr>
     </tbody>
     <thead>
@@ -236,6 +236,16 @@ SPA(Single Page Application)화면 : 비동기 처리(Ajax)등 <br>
     </thead>
 </table>
 
+
+### th:field <br>
+
+![](/assets/image/2024-10-22-th_field_01.png)
+>
+
+![](/assets/image/2024-10-22-th_field_02.png) 
+> 
+
+
 <br>
 <hr>
 <br>
@@ -256,13 +266,12 @@ SPA(Single Page Application)화면 : 비동기 처리(Ajax)등 <br>
 <summary class="summary-title">Web server failed to start. Port 80 was already in use.</summary>
 <p>원인 : 포트 번호 중복</p>
 <details>
-<summary>방법 1> 이클립스 프로젝트 클린</summary>
+<summary>방법 1> 이클립스 Boot Dashboard 확인</summary>
     <pre>
     1. 서버 종료 (콘솔창 확인)
-    2. [Servers] - 'apache-tomcat-9.0.89 at localhost' 우클릭
-    3. 'Clean Tomcat Work Directory'
-    4. 'Clean'
-    5. 프로젝트 우클릭 - 'Run As' - 'Spring Boot App'
+    2. [Window] - [Show View] - 'Other' - 'Other' - 'Boot Dashboard'
+    3. 'stop'
+    4. 'restart'
     </pre>
 </details>
 
@@ -276,6 +285,11 @@ SPA(Single Page Application)화면 : 비동기 처리(Ajax)등 <br>
     </pre>
 </details>
 </details>
+
+
+
+
+
 
 --- 
 
