Spring Annotation 정리 중 (DI, AOP)

--- a/_posts/contents_09_Error/2024-10-23-Github.io_issue.md
+++ b/_posts/contents_09_Error/2024-10-23-Github.io_issue.md
@@ -34,6 +34,7 @@ category: Error
 그래서 _config.yml 파일의 url 부분을 <br>
 'getpoole.com'에서 'easehee.github.io'로 변경했다. <br>
 
+![](/assets/image/2024-10-27-github_config_yml.png)
 
 
 <br>
