--- a/_posts/contents_02_Web/2024-10-28-Board.md
+++ b/_posts/contents_02_Web/2024-10-28-Board.md
@@ -9,9 +9,9 @@ category: Web
 <br>
 
 ---
-# Board (게시판) with Spring Data Jpa<br>
+# Board (게시판) with Spring Data JPA <br>
 
-"프로그래밍을 배웠다면 혼자 게시판 하나는 만들 수 있어야 한다." 
+> "프로그래밍을 배웠다면 혼자 게시판 하나는 만들 수 있어야 한다." 
 
 프로그래밍을 가르쳐주신 선생님께서 해주신 말씀이었다.
 
@@ -52,7 +52,7 @@ CREATE TABLE board (
 글 제목, 작성자, 비밀번호(인증), 글 내용, ... <br>
 게시글의 답글 기능을 구현하기 위한 <strong>그룹, 정렬 번호와 들여쓰기 번호</strong>를 필드로 생성.
 
-<pre class="bg- bk" style="width: fit-content;">
+<pre class="bg-bk" style="width: fit-content;">
 +---------+-------------+------+-----+---------+-------+
 | Field   | Type        | Null | Key | Default | Extra |
 +---------+-------------+------+-----+---------+-------+
@@ -75,6 +75,20 @@ CREATE TABLE board (
 <details>
 <summary class="summary-title">@Entity <br>
 &emsp;테이블과 매핑되는 자바 클래스를 정의</summary>
+<li class="font-lg">JPA의 구현체 Hibernate에 의해 영속성 컨텍스트 내에서 </li>
+
+JPA의 구현체 중 하나인 Hibernate (EntityManager)가
+영속성 컨텍스트 (Persistence Context)라는 가상의 공간을 만들고
+비즈니스 로직의 DAO가 DTO를 통해 Entity와 데이터를 주고 받는다.
+이 때 프로퍼티가 실행될 때 DB에 바로 연결되는 것이 아니라
+
+1차 캐시 영역에서 조회할 데이터를 먼저 찾는다.
+없을 경우 DB에 접근하여 데이터를 가져온다.
+등록, 수정, 삭제과 같은 경우 바로 DB에 저장하는 것이 아니라
+
+쓰기 지연 SQL 저장소에 먼저 저장해두고 한번에 commit과 함께 DB에 저장한다. (EntityTransaction)
+    
+    ![JPA ORM 모식도.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/dbe9cba0-5400-4c80-9d85-003703ede832/4a3cf4ce-8661-45f0-980e-c158add5442f/JPA_ORM_%E1%84%86%E1%85%A9%E1%84%89%E1%85%B5%E1%86%A8%E1%84%83%E1%85%A9.png)
 
 </details>
 
@@ -93,6 +107,12 @@ CREATE TABLE board (
 4. (Delete) ... → list.html
 </pre>
 <br>
+
+
+Spring Data JPA 와 JPQL, 메서드 네이밍 룰
+
+
+
 
 <h3>☑️ JpaRepository → Method Naming Rule</h3>
 
@@ -136,6 +156,65 @@ CREATE TABLE board (
 </details>
 
 </details>
+
+
+<br>
+
+## Entity의 연관관계
+
+Entity는 물리적인 테이블이 영속성 컨텍스트 내에서 객체화된 개념으로 
+
+참조 관계가 있거나 관련있는 테이블의 JOIN 기능을 구현할 수 있다.
+
+이 때 @JoinColumn 이라는 어노테이션을 작성하여 연관관계에 있는 엔티티와의 참조 변수(필드 멤버)를 설정한다.
+
+Hibernate 객체가 영속화 인터페이스(JPA)를 구현하여 
+
+EntityManager를 통해 JDBC와의 연결, sql문의 실행하던 방식을 
+
+Spring Data Jpa방식을 통해 
+
+Repository, CrudRepository, ListCrudRepository, PagingAndSortingRepository, JpaRepository를 상속함으로써 
+
+구현 메서드를 사용할 수 있게 되었다.
+
+![](/assets/image/2024-10-23-JPA_SpringDataJPA.png)
+> 이미지 출처 : [https://velog.io/@murphytklee](https://velog.io/@murphytklee/Spring-ORM-JPA-Hibernate-JDBC-%EC%B4%9D%EC%A0%95%EB%A6%AC)
+
+<br>
+
+![](/assets/image/2024-10-23-JPA-tree.png)
+> Spring Data JPA. Repository 계층 구조
+
+<br>
+
+![](/assets/image/2024-10-24-crud_repository.png)
+> CrudRepository API
+
+<br>
+
+
+이렇게 이미 구현된 메서드인 findAll(), findeById() 와 같이
+
+메서드의 이름을 규칙에 맞게 작성하면 그에 맞는 쿼리를 실행시켜주는 규칙이 있다.
+
+
+### ☑️ 메서드 네이밍 룰
+
+findBy엔티티명필드명()
+
+findBy참조변수명_필드멤버명()
+
+
+
+
+
+
+
+
+
+
+
 
 <br>
 <hr>
@@ -1687,13 +1766,13 @@ public static class Order implements Serializable {
         <td>2</td><td>B</td><td>2</td><td>0</td><td>0</td>
     </tr>
     <tr>
-        <td>3</td><td>&emsp;b1</td><td>2</td><td>3</td><td>0</td>
+        <td>3</td><td>&emsp;b1</td><td>2</td><td>3</td><td>1</td>
     </tr>
     <tr>
-        <td>4</td><td>&emsp;b2</td><td>2</td><td>1</td><td>0</td>
+        <td>4</td><td>&emsp;b2</td><td>2</td><td>1</td><td>1</td>
     </tr>
     <tr>
-        <td>5</td><td>&emsp;&emsp;b3</td><td>2</td><td>2</td><td>0</td>
+        <td>5</td><td>&emsp;&emsp;b3</td><td>2</td><td>2</td><td>2</td>
     </tr>
     <tr>
         <td>6</td><td>C</td><td>6</td><td>0</td><td>0</td>
@@ -1747,13 +1826,13 @@ public static class Order implements Serializable {
         <td>2</td><td>B</td><td>2</td><td>0</td><td>0</td>
     </tr>
     <tr>
-        <td>4</td><td>&emsp;b2</td><td>2</td><td>1</td><td>0</td>
+        <td>4</td><td>&emsp;b2</td><td>2</td><td>1</td><td>1</td>
     </tr>
     <tr>
-        <td>5</td><td>&emsp;&emsp;b3</td><td>2</td><td>2</td><td>0</td>
+        <td>5</td><td>&emsp;&emsp;b3</td><td>2</td><td>2</td><td>2</td>
     </tr>
     <tr>
-        <td>3</td><td>&emsp;b1</td><td>2</td><td>3</td><td>0</td>
+        <td>3</td><td>&emsp;b1</td><td>2</td><td>3</td><td>1</td>
     </tr>
     <tr>
         <td>1</td><td>A</td><td>1</td><td>0</td><td>0</td>
@@ -1763,4 +1842,13 @@ public static class Order implements Serializable {
 </layout>
 
 <br>
-
+<pre class="rec bg-bk">
+1. 새 글 작성
+  글번호 = 기존 글의 가장 큰 글번호 + 1
+2. 댓글 작성
+  글번호 = 기존 글의 가장 큰 글번호 + 1
+  그룹 번호 = 원글의 그룹 번호 저장
+  정렬 번호 = 원글의 정렬 번호 + 1
+→ 같은 그룹 번호의 글 중 
+     정렬번호가 크거나 같은 글의 정렬 번호 1 증가
+</pre>
