Add Memo, Callback Hook

--- a/_posts/contents_03_Spring/2024-10-16-Spring_04_AOP.md
+++ b/_posts/contents_03_Spring/2024-10-16-Spring_04_AOP.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Spring_04_관점 지향 프로그래밍"
+title: "Spring_04_관점 지향 프로그래밍 (AOP)"
 date: 2024-10-16
 categories: blog
 category: Spring
@@ -10,7 +10,7 @@ category: Spring
 
 ---
 
-### 객체 지향 프로그래밍 (AOP : Aspect-Oriented programming)
+### 관점 지향 프로그래밍 (AOP : Aspect-Oriented programming)
 
 AOP는 비즈니스 로직을 구현한 코드에서 공통기능 코드를 직접 호출하지 않는다. <br>
     "AOP framework"가 호출하도록 설정 <br>
@@ -28,7 +28,7 @@ AOP를 적용하면 공통기능과 비즈니스 기능을 따로 개발한 후 
 <hr>
 <br>
 
-- ### AOP 사용 이유 
+### AOP 사용 이유 
 횡단 관심사(Cross-Cutting Concern)를 깔끔하게 처리하기 위함. <br>
 핵심 로직과 부가 기능을 분리하여 기능을 재사용할 수 있도록 한다. <br>
 
@@ -43,7 +43,7 @@ AOP를 적용하면 공통기능과 비즈니스 기능을 따로 개발한 후 
 
 
 
-- ### Spring AOP 용어
+### Spring AOP 용어
 
 <pre><code style="font-size:16px">
 ● Joinpoint
@@ -73,15 +73,70 @@ AOP를 적용하면 공통기능과 비즈니스 기능을 따로 개발한 후 
 
 <br>
 
-- ### 단계별 AOP 용어
+### 단계별 AOP 용어
 
 ![](/assets/image/2024-10-16-Spring_AOP_용어.png)
 
 <br>
 
-- ### MVC와 AOP
+### MVC와 AOP
 
 ![](/assets/image/2024-10-15-Spring_MVC_Container.003.png)
+
+
+
+<br>
+<hr>
+<br>
+
+## Interceptor vs AOP
+
+인터셉터와 AOP 모두 핵심 로직의 전후 부가 기능을 수행할 수 있다.
+
+인터셉터는 DispatcherServlet이 Controller에 요청을 하기 전에 JoinPoint를 가로채어 전처리, 후처리 작업을 수행한다.
+MethodInterceptor 인터페이스를 구현하여 invoke()를 오버라이딩한다. 
+Pointcut에 해당하는 MethodInvocation을 매개변수로 전달받아 핵심로직을 수행한다.
+<pre><code>
+package advice;
+
+import org.aopalliance.intercept.MethodInterceptor;
+import org.aopalliance.intercept.MethodInvocation;
+
+public class LoggingAdvice implements MethodInterceptor {
+	// TODO 1015 Spring 08 _ AOP _ Interceptor : MethodInterceptor 인터페이스 구현 _ invoke() 오버라이딩
+	
+	@Override
+	public Object invoke (MethodInvocation invocation) throws Throwable {
+		/*** 관심사항을 핵심로직 대상 메서드의 앞 또는 뒤에 작성한다. ***/
+		// (ex. login, transaction, logging, ...)
+		System.out.println("=== 핵심로직 수행 전 관심사항 코드 삽입 ===");
+		String methodName = invocation.getMethod().getName(); // 메서드명 반환
+		
+		System.out.println("joinpoint 대상 메서드 : " + methodName);
+
+		/***** invocation.proceed() : 핵심로직 중 "joinpoint" 대상 메서드 *****/
+		Object object = invocation.proceed(); // 정상적으로 실행 시 Object 반환
+
+		System.out.println("=== 핵심로직 수행 후 관심사항 기술 ===");
+
+		return object; // null을 반환하면 AOP가 실행되지 않는다.
+	}
+}
+</code></pre>
+
+<pre>
+
+AOP는 컨트롤러의 요청을 처리하는 Model 내 비즈니스 로직 전, 후에 부가 기능을 수행한다.
+AspectJ 라이브러리 사용 시 어노테이션을 이용하여 AOP 처리를 할 수 있는데
+@Aspect로 관심사항으로 등록할 클래스를 설정하고 
+@Around, @Before, @AfterReturning과 같은 어노테이션을 이용하여 
+pointcut을 탐색할 방법을 설정한다.
+
+<code>
+
+
+</code></pre>
+
 
 
 
@@ -91,8 +146,10 @@ AOP를 적용하면 공통기능과 비즈니스 기능을 따로 개발한 후 
 <hr>
 <br>
 
-- ### cf. Proxy <br>
+<details>
+<summary>cf. Proxy</summary>
 
+<div markdown="1">
 ***Proxy는 유저 클라이언트와 서버 사이에 중개장비***로서 <br>
 ***캐시 기법을 사용하여 서버로 가는 트래픽을 감소***시킨다. <br>
 
@@ -112,8 +169,9 @@ Proxy가 서버에 한 번 접속하여 그 내용을 읽어들여 저장하고 
 <hr>
 <br>
 
-- ### ProxyFactoryBean <br>
-
+<details>
+<summary>ProxyFactoryBean</summary>
+<div markdown="1">
 Spring은 일관된 방법으로 Proxy를 만들 수 있게 도와주는 **추상레이어**를 제공한다. <br>
 여기서 생성된 **Proxy는 Spring의 Bean으로 등록**되어야 한다. <br>
 Spring은 **Proxy 오브젝트를 생성**해주는 기술을 추상화한 **Factory Bean**을 제공한다. <br>
@@ -140,3 +198,8 @@ MethodInterceptor를 구현한 클래스는 타깃 오브젝트가 없어도 만
 **Singleton Bean으로 등록 가능**하다. <br>
 > 출처 : [https://cafe.daum.net/flowlife/](https://cafe.daum.net/flowlife/HrhB/38)
 
+</div>
+</details>
+
+</div>
+</details>
