fix: 목차 설정을 위해 h태그 수정

--- a/_posts/contents_02_Spring/2024-10-16-Spring_04_AOP.md
+++ b/_posts/contents_02_Spring/2024-10-16-Spring_04_AOP.md
@@ -12,7 +12,8 @@ tags:
 
 ---
 
-### 관점 지향 프로그래밍 (AOP : Aspect-Oriented programming)
+## 관점 지향 프로그래밍 
+(AOP : Aspect-Oriented programming)
 
 AOP는 비즈니스 로직을 구현한 코드에서 공통기능 코드를 직접 호출하지 않는다. <br>
     "AOP framework"가 호출하도록 설정 <br>
@@ -30,7 +31,7 @@ AOP를 적용하면 공통기능과 비즈니스 기능을 따로 개발한 후 
 <hr>
 <br>
 
-### AOP 사용 이유 
+## AOP 사용 이유 
 횡단 관심사(Cross-Cutting Concern)를 깔끔하게 처리하기 위함. <br>
 핵심 로직과 부가 기능을 분리하여 기능을 재사용할 수 있도록 한다. <br>
 
@@ -45,7 +46,7 @@ AOP를 적용하면 공통기능과 비즈니스 기능을 따로 개발한 후 
 
 
 
-### Spring AOP 용어
+## Spring AOP 용어
 
 <pre class="highlight"><code style="font-size:16px">
 ● Joinpoint
@@ -75,13 +76,13 @@ AOP를 적용하면 공통기능과 비즈니스 기능을 따로 개발한 후 
 
 <br>
 
-### 단계별 AOP 용어
+## 단계별 AOP 용어
 
 ![](/assets/image/2024-10-16-Spring_AOP_용어.png)
 
 <br>
 
-### MVC와 AOP
+## MVC와 AOP
 
 ![](/assets/image/2024-10-15-Spring_MVC_Container.003.png)
 
@@ -91,7 +92,7 @@ AOP를 적용하면 공통기능과 비즈니스 기능을 따로 개발한 후 
 <hr>
 <br>
 
-## Interceptor vs AOP
+# Interceptor vs AOP
 
 인터셉터와 AOP 모두 핵심 로직의 전후 부가 기능을 수행할 수 있다.
 
